--- a/Articles/SFC/Model.org
+++ b/Articles/SFC/Model.org
@@ -42,7 +42,7 @@ determined by firms' capital stock:
 #+end_export
 where $Y_L$ and $Y_K$ stands for full employment and full capacity output respectively, $v$ is exogenous capital-output ratio and $u$ is utilization rate.
 
-We further assume an economic structure composed by both workers (denoted by subscript $w$) and capitalists (denoted by subscript $k$) households[fn::In accordance with textcite:albanesi_credit_2017, we consider that only the latter invest in real estate and are not credit constrained.].
+We further assume an economic structure composed by both workers (denoted by subscript $w$) and capitalists (denoted by subscript $k$) households.
 Thus, demand-determined output level ($Y$)  is the sum of workers and capitalists consumption ($C_w$ and $C_k$ respectively) and both households and firms investment ($I_h$ and $I_f$ respectively) and only the latter creates capacity to the business sector of the economy:
 #+BEGIN_SRC latex
 \begin{equation}
