--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -373,6 +373,19 @@ Nenhuma alteração
 
 Nenhuma alteração
 
+* Versão <2020-12-11 sex>
+
+
+- [ ] Média geométrica nas simulações reais
+- [ ] Atualizar bibliografias
+  + cite:girardi_autonomous_2015
+  + cite:haluska_growth_2019
+- [ ] Gráfico da taxa própria com tracejados
+- [ ] Checar subescritos
+- [ ] Remover apêndice A e referências
+- [ ] Atualizar agradecimentos
+- [ ] Pente fino
+
 * Referências
   :PROPERTIES:
   :UNNUMBERED: t
