--- a/Materias/2S2020/PED_CE342/Aulas/Atas.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Atas.org
@@ -1,4 +1,3 @@
--*- mode: org -*-
 #+OPTIONS: num:nil
 #+TITLE: Atas Compom
 #+AUTHOR: Gabriel Petrini
@@ -518,23 +517,23 @@ A preocupação com a solvência da dívida pública bem como da adesão da cont
 Do ponto de vista dos fluxos, verificou-se uma deterioração da composição dos gastos em que ampliou-se os encargos com juros em detrimento do investimento público para gerar superávits fiscais.
 Já em termos dos estoques, observa-se uma melhora da dívida pública (principalmente externa) junto de uma piora de seus prazos e custos.
 A melhora da dívida em moeda estrangeira, no entanto, não indica que a restrição externa foi superada, mas sim que reaparece sob novas formas.
-Por fim, destaca-se que o governo também aprofunda a abertura financeira, extinguindo a conta CC5 e unificando o mercado de câmbio livre e flutuante cite:pratesSECAOIVInsercao.
+Por fim, destaca-se que o governo também aprofunda a abertura financeira cite:pratesSECAOIVInsercao.
 
-Apesar deste continuísmo macroeconômico, o governo Lula apresentou uma ruptura não-trivial: centralidade da questão fiscal.
+Apesar deste continuísmo macroeconômico, o governo Lula apresentou uma ruptura não-trivial: centralidade da questão social.
 Esta ênfase da questão social é impulsionada com o progressivo abandono do conservadorismo fiscal.
 A *partir de 2006* ---  e acentuado no pós-crise --- tem início uma estratégia mais clara que coloca no Estado o papel de
-articular o desenvolvimento em que o planejamento de longo prazo é retomado (PAC). 
-Assim, a despeito de um banco central ainda bastante ortodoxo e da política de valorização cambial, coube a política fiscal assumir para si o papel de provedora do crescimento. 
+articular o desenvolvimento em que o planejamento de longo prazo é retomado (ex: PAC). 
+Assim, a despeito de um banco central ainda bastante ortodoxo e da política de valorização cambial, coube à política fiscal assumir para si o papel de provedora do crescimento. 
 Assume esse papel, no entanto, sem que se mude o regime fiscal instaurado por FHC, mas há uma nova gestão fiscal e orçamentária.
 
 Sendo assim, a contração fiscal expansionista deu lugar a uma política fiscal mais ativa sem implicar em uma deterioração da dinâmica da dívida pública. 
 Dentre os fatores que permitiram tal guinada, destaca-se os descontos do investimento público na metas de superávit primário da LDO bem como aumento da arrecadação.
-Em linhas gerais, o aumento das receitas reflete a centralidade da questão social mencionada anteriormente que foi além de transferências e gastos sociais e avançou em direção às mudanças no mercado de trabalho (formalismo e ganhos salariais) e ampliação do crédito.
+Em linhas gerais, o aumento das receitas reflete a centralidade da questão social mencionada anteriormente que foi além de transferências e gastos sociais e avançou em direção às mudanças no mercado de trabalho (formalização e ganhos salariais reais) e ampliação do crédito.
 Em conjunto, tais medidas promoveram --- dada a redução da restrição externa --- o crescimento baseado no mercado interno junto da melhora na distribuição de renda.
 Essa combinação de crescimento com inclusão social --- levada adiante pelo governo Dilma --- é entendida como a base da estratégia social-desenvolvimentista no período cite:biancarelliVelhaSenhoraEm2019. 
 
 Em relação a *estrutura produtiva*, nota-se o insucesso em promover uma política industrial e creditícia capaz de reverter algumas tendências estruturais.
-Nesses termos, a restrição externa reaparece sob novas formas que não são captadas pelos indicadores de solvência: redução do conteúdo tecnológico das exportações e aumento do coeficiente importando.
+Nesses termos, a restrição externa reaparece sob novas formas.
 Em outras palavras, o governo Lula se encerra com um *descompasso* entre uma estrutura de demanda modernizada que não foi acompanhada da modernização da estrutura de oferta cite:melloIndustrialismoAusteridadePolitica.
 O governo Dilma herda esses desafios estruturais, buscando readequar o modelo de
 crescimento em contexto internacional mais difícil.
@@ -550,13 +549,9 @@ No centro da análise estava a necessidade de melhorar a competitividade industr
 Alinhado com a agenda industrialista e em meio a retomada (súbita) dos fluxos de capital, a política cambial esteve no centro.
 De modo a evitar a valorização e volatilidade do câmbio para melhorar a competitividade industrial, foram feitas intervenções no mercado interbancário.
 Como resultado, reduziu a especulação pela apreciação e desprendeu o real do ciclo de liquidez internacional.
-Contudo, a partir de 2014, em face de pressões para desvalorização, tais medidas de regulação cambial foram retiradas e a política cambial passou a contar
-basicamente com intervenções no mercado de derivativos por meio de swaps cambiais e anuncia programa de leilões de câmbio
-cite:cintraFinanciamentoContasExternas2015,melloIndustrialismoAusteridadePolitica.
-
 Além do rompimento da valorização cambial enquanto instrumento de controle inflacionário, a *política monetária* também foi redirecionada para a agenda industrialista (sem romper com o RMI).
-Na ausência de um padrão de financiamento autônomo de longo prazo, os bancos públicos foram acionados para reduzir a taxa de juros e os spreads bancários para facilitar o
-financiamento do desenvolvimento.
+
+Na ausência de um padrão de financiamento autônomo de longo prazo, os bancos públicos foram acionados para reduzir a taxa de juros e os spreads bancários para facilitar o financiamento do desenvolvimento.
 Com redução da Selic e política cambial ativa, o controle de preços contou com o
 represamento de preços administrados (com finalidade também de reduzir custos).
 Na tentativa de ampliar o horizonte temporal do financiamento público, alterou-se o manejo da dívida pública substituindo LFTs por títulos pré-fixados para, assim, estimular o mercado de longo prazo. 
@@ -567,11 +562,12 @@ Além disso, é importante destacar que, na ausência de um padrão de financiam
 Dentre as consequências, verificou-se uma deterioração do saldo fiscal cujo principal condicionante foi a redução das *receitas*.
 No que diz respeito aos gastos, destaca-se uma redução do investimento público em que ampliou-se a participação relativa dos gastos com pessoal.
 Assim, reduziu-se o efeito expansionista da política fiscal dada a concentração de gastos com menores multiplicadores fiscais.
+
 ** Conclusão e comparação geral
+    
 A título de conclusão, resta uma comparação geral.
 Os governos FHC e parte do governo Lula são caracterizados pelo prosseguimento da agenda liberalizante em que o papel do Estado foi minorado.
-Apedas de algumas continuidades, o governo Lula promoveu um ineditismo histórico: conjugação de crescimento com inclusão social.
-Tal resultado --- levado adiante pelo governo Dilma --- decorre tanto da questão social quando do abandono progressivo do conservadorismo fical, reposicionando o papel do Estado no desenvolvimento.
+Apesar de algumas continuidades, o governo Lula promoveu um ineditismo histórico: conjugação de crescimento com inclusão social.
+Tal resultado --- levado adiante pelo governo Dilma --- decorre tanto da questão social quando do abandono progressivo do conservadorismo fiscal, reposicionando o papel do Estado no desenvolvimento.
 Em conjunto, tais medidas promoveram uma dinamização do mercado interno e modernização da demanda que não foi acompanhada igualmente pela estrutura produtiva.
 De modo a superar tais desafios, adotou-se uma agenda industrialista que, por sua vez, não foi industrializante.
-Tal insucesso deve ser analisado além da conjuntura e da política econômico, incluindo elementos estruturais e de economia política.
